--- a/nextfire/package.json
+++ b/nextfire/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.7.1",
+    "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-firebase-hooks": "^5.1.1",
+    "react-hot-toast": "^2.4.1"
   }
 }
